php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #55423 cli-server could not output correctly in some case.
Submitted: 2011-08-15 14:28 UTC Modified: 2011-09-07 05:14 UTC
From: chobieee at gmail dot com Assigned: laruence (profile)
Status: Closed Package: Built-in web server
PHP Version: 5.4.0alpha3 OS: Mac OS 10.6.7
Private report: No CVE-ID: None
 [2011-08-15 14:28 UTC] chobieee at gmail dot com
Description:
------------
cli-server couldn't output correctly when it writes little big contents (200k 
higher) on my OSX.

I'm not sure about network programming.
so i think my patch is not good to solve this issue.

can you make sure my patch?


fyi, when i output jquery file each 8192 bytes. it looks no problem.


Test script:
---------------
<?php
header("Content-type: text/plain");
$data = file_get_contents("http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.js");
header("Content-length: ". strlen($data));
echo $data;

Expected result:
----------------
It outputs fully contents.


Patches

cli_server_send_through_fix.patch (last revision 2011-08-15 14:28 UTC by chobieee at gmail dot com)

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2011-09-07 05:14 UTC] laruence@php.net
Automatic comment from SVN on behalf of laruence
Revision: http://svn.php.net/viewvc/?view=revision&amp;revision=316298
Log: Fixed Bug #55423(cli-server could not output correctly in some case)
 [2011-09-07 05:14 UTC] laruence@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: laruence
 [2011-09-07 05:14 UTC] laruence@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2012-04-18 09:49 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=0b16d13352af9ec9d532b5001c722a85f9032598
Log: Fixed Bug #55423(cli-server could not output correctly in some case)
 [2012-07-24 23:40 UTC] rasmus@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=0b16d13352af9ec9d532b5001c722a85f9032598
Log: Fixed Bug #55423(cli-server could not output correctly in some case)
 [2013-11-17 09:36 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=0b16d13352af9ec9d532b5001c722a85f9032598
Log: Fixed Bug #55423(cli-server could not output correctly in some case)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC