Fixed Bug #55423(cli-server could not output correctly in some case)

git-svn-id: http://svn.php.net/repository/php/php-src/trunk@316298 c90b9560-bf6c-de11-be94-00142212c4b1